--- a/REPLReaderWriterTestsUnmanaged/REPLReaderWriterTestsUnmanaged.vcxproj
+++ b/REPLReaderWriterTestsUnmanaged/REPLReaderWriterTestsUnmanaged.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{1244344D-1C2F-4C9F-A96D-9D4EF7CC3550}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>REPLReaderWriterTests</RootNamespace>
+    <RootNamespace>REPLReaderWriterTestsUnmanaged</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
     <ProjectSubType>NativeUnitTestProject</ProjectSubType>
   </PropertyGroup>
@@ -179,6 +179,11 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="REPLFunctionsTests.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\REPLReaderWriter\REPLReaderWriter.vcxproj">
+      <Project>{e442fba8-1a80-4eac-b9b0-fec0dcc42e93}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
